--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,10 @@ ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 0.1.1
 
+** windows not residing in a frame are hidden
+This gets rid of annoying flickers around the edges of active windows
+as windows in the back update.
+
 ** rat cursor changes
 
 When you hit the prefix key the rat cursor changes to a square to tell
