--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-04-13  shawn  <sabetts@diggin.lamenet.tmp>
 
+	* src/actions.c (cmd_clock): doesn't allocate memory. displays the
+	date.
+
 	* src/split.h (blank_frame): new prototype
 
 	* src/split.c (split_frame): calls unhide_window after maximizing
