--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,12 @@ ratpoison NEWS --- history of user-visible changes.  -*- outline -*-
 
 * Changes since 0.1.1
 
+** new command 'help'
+help brings up a key binding listing. it is bound to C-t ?.
+
+** new command 'quit'
+This command quits ratpoison
+
 ** windows not residing in a frame are hidden
 This gets rid of annoying flickers around the edges of active windows
 as windows in the back update.
