--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2001-04-15  shawn  <sabetts@diggin.lamenet.tmp>
 
+	* src/actions.c (cmd_clock): remove newline from date string.
+
 	* src/messages.h (MESSAGE_WELCOME): new define
 
 	* src/manage.c (scanwins): ignore the help window
