--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-08-20  Shawn  <sabetts@hotdog>
+
+	* src/events.c (cleanup_frame): set the new window's frame before
+	maximizing it.
+
 2001-08-19  Shawn  <sabetts@hotdog>
 
 	* src/events.c (cleanup_frame): unhide the new active window
