--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2001-08-26  Shawn  <sabetts@hotdog>
 
+	* src/events.c (configure_request): make sure the window is iconic
+	before notifying a raise request.
+
 	* src/split.c (num_frames): uncomment.
 	(set_active_frame): only show the frame indicator if, in addition,
 	there are more than 1 frames.
