--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-08-29  Shawn  <sabetts@hotdog>
+
+	* src/manage.c (unhide_window): always raise the window.
+
 2001-08-27  Shawn  <sabetts@hotdog>
 
 	* src/actions.c (cmd_clock): pad the time with spaces on either
